Added OrGate. Not finished :)

--- a/Circuits/Circuits.csproj
+++ b/Circuits/Circuits.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Gate.cs" />
+    <Compile Include="OrGate.cs" />
     <Compile Include="Pin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
