Finished the NotGate, started on the InputSource and OutputLamp, but need to know how to select it to change voltage. Created the abstract Evaluate method.

--- a/Circuits/Circuits.csproj
+++ b/Circuits/Circuits.csproj
@@ -54,8 +54,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Gate.cs" />
+    <Compile Include="InputSource.cs" />
     <Compile Include="NotGate.cs" />
     <Compile Include="OrGate.cs" />
+    <Compile Include="OutputLamp.cs" />
     <Compile Include="Pin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
