--- a/Circuits/Circuits.csproj
+++ b/Circuits/Circuits.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndGate.cs" />
+    <Compile Include="Compound.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
